[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/bgs/title_screen.jpeg" type="Texture" id=1]
[ext_resource path="res://scenes/tests/Tests.gd" type="Script" id=2]
[ext_resource path="res://resources/buttons/Background_Button_03.png" type="Texture" id=3]
[ext_resource path="res://resources/buttons/Background_Button_02.png" type="Texture" id=4]
[ext_resource path="res://resources/buttons/Background_Button_01.png" type="Texture" id=5]
[ext_resource path="res://resources/buttons/BG_Button_Pressed_01.png" type="Texture" id=6]
[ext_resource path="res://resources/buttons/BG_Button_Pressed_03.png" type="Texture" id=7]
[ext_resource path="res://resources/buttons/BG_Button_Pressed_02.png" type="Texture" id=8]

[node name="Tests" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 426, 243 )
texture = ExtResource( 1 )

[node name="TreinoButton" type="TouchScreenButton" parent="."]
position = Vector2( 571.145, 135.732 )
rotation = -0.0872665
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="DueloButton" type="TouchScreenButton" parent="."]
position = Vector2( 588, 215 )
rotation = 0.0872665
normal = ExtResource( 4 )
pressed = ExtResource( 8 )

[node name="MeusDisparosButton" type="TouchScreenButton" parent="."]
position = Vector2( 563, 330 )
rotation = -0.0872665
normal = ExtResource( 3 )
pressed = ExtResource( 7 )

[node name="Text" type="RichTextLabel" parent="."]
margin_left = 39.0
margin_top = 17.0
margin_right = 352.0
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TreinoButton" to="." method="_on_TreinoButton_pressed"]
[connection signal="pressed" from="DueloButton" to="." method="_on_DueloButton_pressed"]
[connection signal="pressed" from="MeusDisparosButton" to="." method="_on_MeusDisparosButton_pressed"]
